--- a/cv.tex
+++ b/cv.tex
@@ -101,8 +101,9 @@
 \noindent {\huge\textbf{Vishal Kumar}}
 \vspace{-5pt}
 \end{flushleft}
-Department of Computer Science $\&$ Engineering \hfill \href{mailto:vishalku23@iitk.ac.in}{\faEnvelope{ vishalku23@iitk.ac.in}} / \faPhone{ +91-9024945939
-\\Indian Institute of Technology, Kanpur \hfill\href{https://github.com/vishalsavarna}{ \faGithub{ vishalsavarna}} / \href{https://www.linkedin.com/in/vishal-kumar-3688761a2 }{ \faLinkedinSquare{ vishalsavarna}}
+Department of Computer Science $\&$ Engineering \hfill \href{mailto:vishalku23@iitk.ac.in}{\faEnvelope{ vishalku23@iitk.ac.in}} / \faPhone{ +91-9024945939}
+\\Indian Institute of Technology, Kanpur \hfill\href{https://github.com/vishalsavarna}{ \faGithub{ vishalsavarna}} / \href{https://www.linkedin.com/in/vishal-kumar-3688761a2 }{ \faLinkedinSquare{ vishalsavarna}} / 
+\href{https://www.cse.iitk.ac.in/users/vishalsavarna/}{\faBriefcase{  Portfolio}}
 \vspace{5pt}
 \vskip -2mm  
 \vskip -2mm
@@ -300,4 +301,6 @@ Department of Computer Science $\&$ Engineering \hfill \href{mailto:vishalku23@i
 
 
 \end{document}
+
+
 
